dev/test_programs/INVALID/group13/multiple_return.go
package main

func main() {
	println("hello")
}

func test(a int) int {
	return 1, 2
}
